fix illustration overlap

--- a/style/main.css
+++ b/style/main.css
@@ -943,7 +943,7 @@ img#scroll-to-discover-mobile {
 
 	.panel-7 .animation-container {
 		height: 40%;
-		padding: 10% 10% 0 10%;
+		padding: 10% 17% 0 17%;
 	}
 
 	.animation-items {
@@ -998,24 +998,6 @@ img#scroll-to-discover-mobile {
 }
 
 /* ANIMATIONS */
-
-/* Spinning the sphere using key frames
-@-ms-keyframes spin {
-  from { -ms-transform: rotate(0deg); }
-  to { -ms-transform: rotate(360deg); }
-}
-@-moz-keyframes spin {
-  from { -moz-transform: rotate(0deg); }
-  to { -moz-transform: rotate(360deg); }
-}
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-@-webkit-keyframes spin {
-  from { -webkit-transform: rotate(0deg); }
-  to { -webkit-transform: rotate(360deg); }
-} */
 
 /**
  * ----------------------------------------
